kubernetes/cluster/media/qbittorrent/qbittorrent.yaml
# Service: Qbittorrent
# Ingress: qbittorrent.brhd.io
# Label: app.kubernetes.io/name: qbittorrent
---
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent-ui
  namespace: media
  labels:
    app.kubernetes.io/name: qbittorrent
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  selector:
    app.kubernetes.io/name: qbittorrent
---
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent-lb
  labels:
    app.kubernetes.io/name: qbittorrent
  annotations:
    metallb.io/address-pool: forge-pool
    metallb.io/loadBalancerIPs: "192.168.12.71"
spec:
  selector:
    app.kubernetes.io/name: qbittorrent
  externalTrafficPolicy: Cluster
  allocateLoadBalancerNodePorts: false
  type: LoadBalancer
  ports:
   - port: 32412
     name: torrent-tcp
     protocol: TCP
     targetPort: 32412
   - port: 32412
     name: torrent-udp
     protocol: UDP
     targetPort: 32412
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qbittorrent
  namespace: media
  labels:
    app.kubernetes.io/name: qbittorrent
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: qbittorrent
  strategy:
    type: Recreate
  revisionHistoryLimit: 1
  template:
    metadata:
      namespace: media
      labels:
        app.kubernetes.io/name: qbittorrent
    spec:
      restartPolicy: Always
      containers:
        - name: qbittorrent
          image: ghcr.io/hotio/qbittorrent:release-5.2.4
          resources:
            requests:
              memory: 100Mi
              cpu: 100m
            limits:
              memory: 1500Mi
          ports:
            - name: ui
              protocol: TCP
              containerPort: 8080
            - name: torrent-tcp
              protocol: TCP
              containerPort: 32412
            - name: torrent-udp
              protocol: UDP
              containerPort: 32412
          volumeMounts:
            - name: qbittorrent-config
              mountPath: /config
            - name: downloads
              mountPath: /downloads
      volumes:
        - name: qbittorrent-config
          persistentVolumeClaim:
            claimName: qbittorrent-config
        - name: downloads
          persistentVolumeClaim:
            claimName: downloads
      nodeSelector:
        feature.node.kubernetes.io/cpu-cpuid.HYPERVISOR: "true"
